<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/settingsToolbar"
        layout="@layout/toolbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.core.widget.ContentLoadingProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="0dp"
        android:layout_height="8dp"
        android:indeterminate="true"
        app:layout_constraintEnd_toEndOf="@id/settingsToolbar"
        app:layout_constraintStart_toStartOf="@id/settingsToolbar"
        app:layout_constraintTop_toBottomOf="@id/settingsToolbar" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/activity_vertical_margin"
        app:cardCornerRadius="16dp"
        app:cardElevation="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settingsToolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/storageLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:drawablePadding="@dimen/activity_horizontal_margin"
                android:gravity="center_vertical"
                android:text="@string/settings_storage_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:drawableStartCompat="@drawable/baseline_settings_backup_restore_black_24dp"
                app:drawableTint="?attr/colorControlNormal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exportButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="60dp"
                android:layout_marginTop="8dp"
                android:padding="0dp"
                android:text="@string/export_button_text"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/storageLabel"
                app:layout_constraintTop_toBottomOf="@id/storageLabel"
                app:rippleColor="@color/transparent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/importButton"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/import_button_text"
                android:textAlignment="textStart"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                app:layout_constraintEnd_toEndOf="@id/exportButton"
                app:layout_constraintStart_toStartOf="@id/exportButton"
                app:layout_constraintTop_toBottomOf="@id/exportButton"
                app:rippleColor="@color/transparent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>